--- a/RaftClient/Properties/launchSettings.json
+++ b/RaftClient/Properties/launchSettings.json
@@ -13,7 +13,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "http://localhost:5057",
+        "applicationUrl": "http://0.0.0.0:8080",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -22,7 +22,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7166;http://localhost:5057",
+        "applicationUrl": "https://localhost:7166;http://0.0.0.0:8080",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
