--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,12 @@ services:
   node1:
     build:
       context: .
-      dockerfile: dev.Dockerfile
-    working_dir: /app
-    user: 1000:100
-    volumes:
-      - ./:/app
+      dockerfile: dev-slow.Dockerfile
     environment:
       - NODE_ID=1
       - OTHER_NODES=2,http://node2:8080;3,http://node3:8080
       - NODE_INTERVAL_SCALAR=50
-    command: dotnet watch --project RaftAPI
+    command: dotnet run --project RaftAPI
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 10s
@@ -21,16 +17,12 @@ services:
   node2:
     build:
       context: .
-      dockerfile: dev.Dockerfile
-    working_dir: /app
-    user: 1000:100
-    volumes:
-      - ./:/app
+      dockerfile: dev-slow.Dockerfile
     environment:
       - NODE_ID=2
       - OTHER_NODES=1,http://node1:8080;3,http://node3:8080
       - NODE_INTERVAL_SCALAR=50
-    command: dotnet watch --project RaftAPI
+    command: dotnet run --project RaftAPI
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 10s
@@ -40,16 +32,12 @@ services:
   node3:
     build:
       context: .
-      dockerfile: dev.Dockerfile
-    working_dir: /app
-    user: 1000:100
-    volumes:
-      - ./:/app
+      dockerfile: dev-slow.Dockerfile
     environment:
       - NODE_ID=3
       - OTHER_NODES=1,http://node1:8080;2,http://node2:8080
       - NODE_INTERVAL_SCALAR=50
-    command: dotnet watch --project RaftAPI
+    command: dotnet run --project RaftAPI
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 10s
@@ -60,13 +48,9 @@ services:
   client:
     build:
       context: .
-      dockerfile: dev.Dockerfile
-    working_dir: /app
-    user: 1000:100
-    volumes:
-      - ./:/app
+      dockerfile: dev-slow.Dockerfile
     environment:
       - NODE_URLS=http://node1.8080,http://node2.8080,http://node3.8080
-    command: dotnet watch --project RaftClient2
+    command: dotnet run --project RaftClient2
     ports:
-    - 5000:8080
+    - 5007:8080
